--- a/development.ini
+++ b/development.ini
@@ -3,17 +3,9 @@ use = egg:tutorial
 pyramid.reload_templates = true
 pyramid.includes =
     pyramid_debugtoolbar
+    pyramid_tm
 
-[server:main]
-use = egg:pyramid#wsgiref
-host = 0.0.0.0
-port = 6543
-
-[app:main]
-use = egg:tutorial
-pyramid.reload_templates = true
-pyramid.includes =
-    pyramid_debugtoolbar
+sqlalchemy.url = sqlite:///%(here)s/sqltutorial.sqlite
 
 [server:main]
 use = egg:pyramid#wsgiref
@@ -23,7 +15,7 @@ port = 6543
 # Begin logging configuration
 
 [loggers]
-keys = root, tutorial
+keys = root, tutorial, sqlalchemy.engine.base.Engine
 
 [logger_tutorial]
 level = DEBUG
@@ -39,6 +31,11 @@ keys = generic
 [logger_root]
 level = INFO
 handlers = console
+
+[logger_sqlalchemy.engine.base.Engine]
+level = INFO
+handlers =
+qualname = sqlalchemy.engine.base.Engine
 
 [handler_console]
 class = StreamHandler
