--- a/development.ini
+++ b/development.ini
@@ -3,9 +3,7 @@ use = egg:tutorial
 pyramid.reload_templates = true
 pyramid.includes =
     pyramid_debugtoolbar
-    pyramid_tm
-
-sqlalchemy.url = sqlite:///%(here)s/sqltutorial.sqlite
+tutorial.secret = 98zd
 
 [server:main]
 use = egg:pyramid#wsgiref
